collective/deployment-staging.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: collective-stg
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: collective-stg
    spec:
      containers:
      - name: collective-stg
        image: terrariumai/collective:latest
        args: [
          "-redis-addr=redismod.default.svc:6379",
          "-environment-addr=environment-stg.default.svc.cluster.local:9090",
          "-env=staging"
        ]
        imagePullPolicy: Always
        ports:
          - containerPort: 9090
