collective/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: collective
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: collective
    spec:
      containers:
      - name: collective
        image: terrariumai/collective:0.1.4
        args: [
          "-redis-addr=10.0.0.3:6379"
        ]
        imagePullPolicy: Always
        ports:
          - containerPort: 9090
