collective/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collective
spec:
  ports:
  - port: 9090
    targetPort: 9090
    protocol: TCP
    name: http2
  selector:
    app: collective
  type: LoadBalancer
  loadBalancerIP: "34.68.153.115"
